--- a/src/OC/PlatformBundle/Resources/config/routing.yml
+++ b/src/OC/PlatformBundle/Resources/config/routing.yml
@@ -32,3 +32,7 @@ oc_platform_view_slug:
     requirements:
         year: \d{4}
         _format: html|xml
+
+oc_platform_edit_image:
+    path: /a_faire_plus_tard
+    defaults: {_controller: OCPlatformBundle:Advert:editImage}
