--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,11 +1,11 @@
 # This file is auto-generated during the composer install
 parameters:
     database_driver: pdo_mysql
-    database_host: 5.196.227.134
-    database_port: 3306
+    database_host: 127.0.0.1
+    database_port: null
     database_name: symfony
-    database_user: nas
-    database_password: nasty
+    database_user: root
+    database_password: null
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
@@ -15,3 +15,4 @@ parameters:
     debug_toolbar: true
     debug_redirects: false
     use_assetic_controller: true
+
